[gd_scene load_steps=49 format=2]

[ext_resource path="res://Assets/Menu/panel-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/TutorialFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Menu/kb_light_symbols.png" type="Texture" id=3]
[ext_resource path="res://Src/misc/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://Src/Levels/circlepulse.tres" type="Material" id=5]
[ext_resource path="res://Assets/fill.png" type="Texture" id=6]
[ext_resource path="res://Assets/uibar.png" type="Texture" id=7]
[ext_resource path="res://Assets/Font/Silver.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Src/Pixel.tscn" type="PackedScene" id=13]
[ext_resource path="res://Src/Props/Wormhole.tres" type="Material" id=15]
[ext_resource path="res://Assets/Textures/Layer1.png" type="Texture" id=16]
[ext_resource path="res://Assets/redirect.png" type="Texture" id=17]
[ext_resource path="res://Assets/redirectui.png" type="Texture" id=18]
[ext_resource path="res://Assets/redirectuiarrow.png" type="Texture" id=19]
[ext_resource path="res://Assets/Menu/kb_light_alphanumeric.png" type="Texture" id=20]
[ext_resource path="res://Assets/Shield.png" type="Texture" id=21]
[ext_resource path="res://Assets/boost icon.png" type="Texture" id=22]


[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=12]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Warning:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=13]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 20 )
region = Rect2( 0, 400, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 20 )
region = Rect2( 32, 400, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=17]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 20 )
region = Rect2( 0, 368, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 20 )
region = Rect2( 32, 368, 16, 16 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="DynamicFont" id=21]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="Animation" id=25]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=26]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel2:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=27]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=28]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel4:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "fade_out_panel5"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel5:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "fade_out_panel6"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel6:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "fade_out_panel7"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel7:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Tutorial" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -388.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel1" type="TextureRect" parent="."]
visible = false
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 325, 150 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.5
margin_top = -65.0
margin_right = 113.5
margin_bottom = 65.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel1/GridContainer"]
margin_right = 48.0
margin_bottom = 63.0
rect_min_size = Vector2( 48, 48 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Control" type="AnimatedSprite" parent="Panel1/GridContainer/Panel"]
position = Vector2( 24.1498, 24.7448 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Brake" type="Label" parent="Panel1/GridContainer"]
margin_left = 52.0
margin_right = 226.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "Brake"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Panel1/GridContainer"]
margin_top = 67.0
margin_right = 48.0
margin_bottom = 130.0
rect_min_size = Vector2( 48, 48 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Space" type="AnimatedSprite" parent="Panel1/GridContainer/Panel2"]
position = Vector2( 23.4756, 24.0874 )
scale = Vector2( 3, 3 )
frames = SubResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Accelerate" type="Label" parent="Panel1/GridContainer"]
margin_left = 52.0
margin_top = 67.0
margin_right = 226.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "Accelerate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="TextureRect" parent="."]
visible = false
margin_right = 325.0
margin_bottom = 150.0
rect_min_size = Vector2( 325, 150 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HBoxContainer" parent="Panel2"]
margin_left = 20.0
margin_top = 10.0
margin_right = 302.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Panel2/HSeparator"]
margin_right = 128.0
margin_bottom = 130.0
rect_min_size = Vector2( 128, 128 )
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )
fill_mode = 4
nine_patch_stretch = true

[node name="TextureRect" type="TextureRect" parent="Panel2/HSeparator/TextureProgress"]
show_behind_parent = true
material = ExtResource( 5 )
margin_right = 128.0
margin_bottom = 129.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2/HSeparator"]
margin_left = 132.0
margin_top = 14.0
margin_right = 282.0
margin_bottom = 116.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "Energy is needed to accelerate, and for powerups"
autowrap = true

[node name="Panel3" type="TextureRect" parent="."]
visible = false
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 350, 150 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -70.5
margin_right = 160.0
margin_bottom = 70.5
rect_min_size = Vector2( 150, 102 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 0.941176, 0, 1 )
text = "Gain energy on the first orbit of a planet, and by collecting the crystal pickups"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Panel3"]
position = Vector2( 26.0054, 125.422 )
scale = Vector2( 1.25, 1.25 )
playing = true

[node name="Panel4" type="TextureRect" parent="."]
visible = false
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 350, 150 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 0.941176, 0, 1 )
text = "Some wormholes take you new places, while some will end the adventure"
align = 1
valign = 1
autowrap = true

[node name="Wormhole" type="Sprite" parent="Panel4"]
modulate = Color( 1, 1, 1, 0.756863 )
show_behind_parent = true
material = ExtResource( 15 )
position = Vector2( 68.999, 77.2153 )
rotation = 4.45504
scale = Vector2( 0.247725, 0.428423 )
texture = ExtResource( 16 )

[node name="Pixel" parent="Panel4/Wormhole" instance=ExtResource( 13 )]
margin_left = -287.019
margin_top = -208.711
margin_right = 337.981
margin_bottom = 226.289

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel4/Wormhole"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 12 )

[node name="Panel5" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 350, 150 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="Panel5"]
show_behind_parent = true
position = Vector2( 24.1329, 8.41846 )
rotation = -0.353023
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="Panel5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -58.5
margin_right = 150.0
margin_bottom = 58.5
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 0.941176, 0, 1 )
text = "The redirect powerup allows you switch directions within a certain range"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel5"]
position = Vector2( 272.758, 101.583 )
rotation = 0.678934
texture = ExtResource( 18 )

[node name="Sprite2" type="Sprite" parent="Panel5/Sprite"]
position = Vector2( 2.80618, -3.36731 )
rotation = 0.726695
texture = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Panel5"]
position = Vector2( 52.3898, 107.377 )
scale = Vector2( 3, 3 )
frames = SubResource( 16 )
frame = 1
playing = true

[node name="Panel6" type="TextureRect" parent="."]
visible = false
margin_right = 350.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel6"]
position = Vector2( 39.4237, 127.342 )
texture = ExtResource( 21 )

[node name="Label" type="Label" parent="Panel6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.5
margin_top = -75.0
margin_right = 162.5
margin_bottom = 75.0
rect_min_size = Vector2( 325, 150 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 0.941176, 0, 1 )
text = "The shield can help protect Luna against some of the other bully moons and asteroids, once!"
align = 1
valign = 1
autowrap = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Panel6"]
position = Vector2( 326.96, 107.064 )
scale = Vector2( 3, 3 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="Panel7" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 350, 150 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel7"]
position = Vector2( 19.257, 112.394 )
rotation = 3.32161
texture = ExtResource( 22 )

[node name="Label" type="Label" parent="Panel7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 1, 0.941176, 0, 1 )
text = "And if all else fails, you can always rewind back some amount of time, with shift"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Panel7"]
position = Vector2( 284.769, 108.427 )
scale = Vector2( 3, 3 )
frames = SubResource( 24 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out_panel1 = SubResource( 25 )
anims/fade_out_panel2 = SubResource( 26 )
anims/fade_out_panel3 = SubResource( 27 )
anims/fade_out_panel4 = SubResource( 28 )
anims/fade_out_panel5 = SubResource( 29 )
anims/fade_out_panel6 = SubResource( 30 )
anims/fade_out_panel7 = SubResource( 31 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
